workloads/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: team1-ingress
spec:
  rules:
  - host: team1.techcrumble.cloud
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 9898
